Fix: Position of dark mode button toggle

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,8 @@ body, nav, th, td, .btn, .form-control, .form-select {
 }
 
 .tdnn {
-  margin: 0 auto;
   /*change size of toggle with font-size*/
-  font-size: 30%;
-  margin-top: 10em;
+  font-size: 15%;
   position: relative;
     height: var(--toggleHeight);
     width: var(--toggleWidth);
